@@ -27,11 +27,8 @@ import org.apache.log4j.Logger;
 import org.edu_sharing.alfresco.authentication.HttpContext;
 import org.edu_sharing.alfresco.lightbend.LightbendConfigLoader;
 import org.edu_sharing.alfresco.policy.NodeCustomizationPolicies;
-import org.edu_sharing.alfresco.repository.server.authentication.Context;
 import org.edu_sharing.alfresco.policy.OnCopyIOPolicy;
-import org.edu_sharing.restservices.node.v1.model.RevokeDetails;
-import org.edu_sharing.service.handleservice.HandleService;
-import org.edu_sharing.service.handleservice.HandleServiceFactory;
+import org.edu_sharing.alfresco.repository.server.authentication.Context;
 import org.edu_sharing.alfresco.service.search.CMISSearchHelper;
 import org.edu_sharing.alfresco.tools.EduSharingNodeHelper;
 import org.edu_sharing.alfrescocontext.gate.AlfAppContextGate;
@@ -47,11 +44,12 @@ import org.edu_sharing.repository.server.RepoFactory;
 import org.edu_sharing.repository.server.tools.*;
 import org.edu_sharing.repository.server.tools.cache.RepositoryCache;
 import org.edu_sharing.repository.tools.URLHelper;
+import org.edu_sharing.restservices.node.v1.model.RevokeDetails;
+import org.edu_sharing.service.handleservice.FeatureInfoHandleService;
+import org.edu_sharing.service.handleservice.HandleService;
+import org.edu_sharing.service.handleservice.HandleServiceFactory;
 import org.edu_sharing.service.handleservicedoi.DOIService;
 import org.edu_sharing.service.handleservicedoi.FeatureInfoDoiService;
-import org.edu_sharing.service.handleservice.FeatureInfoHandleService;
-import org.edu_sharing.service.nodeservice.annotation.NodeManipulation;
-import org.edu_sharing.service.nodeservice.annotation.NodeOriginal;
 import org.edu_sharing.service.nodeservice.model.GetPreviewResult;
 import org.edu_sharing.service.permission.HandleMode;
 import org.edu_sharing.service.permission.HandleParam;
@@ -143,37 +141,37 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 	}
 
 	public NodeRef copyNode(String nodeId, String toNodeId, boolean copyChildren) throws Throwable {
-		NodeRef result = serviceRegistry.getRetryingTransactionHelper().doInTransaction(()->{
-			NodeRef nodeRef = new NodeRef(StoreRef.STORE_REF_WORKSPACE_SPACESSTORE, nodeId);
-			throwIfRestrictedAccessPresent(nodeRef);
+        // copy and rename has a weird naming scheme
 
-			CopyService copyService = serviceRegistry.getCopyService();
+        return serviceRegistry.getRetryingTransactionHelper().doInTransaction(()->{
+            NodeRef nodeRef = new NodeRef(StoreRef.STORE_REF_WORKSPACE_SPACESSTORE, nodeId);
+            throwIfRestrictedAccessPresent(nodeRef);
 
-			// copy and rename has a weird naming scheme
-			String originalName = (String) nodeService.getProperty(nodeRef, ContentModel.PROP_NAME);
-			NodeRef copyNodeRef = copyService.copyAndRename(nodeRef,
-					new NodeRef(StoreRef.STORE_REF_WORKSPACE_SPACESSTORE, toNodeId),
-					QName.createQName(CCConstants.CM_ASSOC_FOLDER_CONTAINS),
-					QName.createQName(originalName), copyChildren);
+            CopyService copyService = serviceRegistry.getCopyService();
 
-			int renameCounter = 1;
-			while(true) {
-				try {
-					String name = originalName;
-					if(renameCounter > 1){
-						name = NodeServiceHelper.renameNode(originalName, renameCounter);
-					}
-					nodeServiceAlfresco.setProperty(copyNodeRef, QName.createQName(CCConstants.CM_NAME), name);
-					break;
-				} catch (DuplicateChildNodeNameException e){
-					renameCounter++;
-				}
-			}
-			resetVersion(copyNodeRef);
-			return copyNodeRef;
-		});
+            // copy and rename has a weird naming scheme
+            String originalName = (String) nodeService.getProperty(nodeRef, ContentModel.PROP_NAME);
+            NodeRef copyNodeRef = copyService.copyAndRename(nodeRef,
+                    new NodeRef(StoreRef.STORE_REF_WORKSPACE_SPACESSTORE, toNodeId),
+                    QName.createQName(CCConstants.CM_ASSOC_FOLDER_CONTAINS),
+                    QName.createQName(originalName), copyChildren);
 
-		return result;
+            int renameCounter = 1;
+            while(true) {
+                try {
+                    String name = originalName;
+                    if(renameCounter > 1){
+                        name = NodeServiceHelper.renameNode(originalName, renameCounter);
+                    }
+                    nodeServiceAlfresco.setProperty(copyNodeRef, QName.createQName(CCConstants.CM_NAME), name);
+                    break;
+                } catch (DuplicateChildNodeNameException e){
+                    renameCounter++;
+                }
+            }
+            resetVersion(copyNodeRef);
+            return copyNodeRef;
+        });
 	}
 
 	private void throwIfRestrictedAccessPresent(NodeRef nodeRef) {
@@ -226,7 +224,13 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 		}
 		assocName = "{" + CCConstants.NAMESPACE_CCM + "}" + assocName;
         Map<String, Object> propsConverted = new HashMap<>(_props);
-		propsConverted = runSetInterceptors(null, propsConverted, PropertiesInterceptorFactory.getPropertiesSetInterceptors().stream().filter(i -> i.getInterceptorTiming().equals(PropertiesSetInterceptor.SetInterceptorTiming.BeforeAlfrescoInterceptors)).collect(Collectors.toList()));
+		propsConverted = runSetInterceptors(
+                null,
+                propsConverted,
+                PropertiesInterceptorFactory.getPropertiesSetInterceptors()
+                        .stream()
+                        .filter(i -> i.getInterceptorTiming().equals(PropertiesSetInterceptor.SetInterceptorTiming.BeforeAlfrescoInterceptors))
+                        .collect(Collectors.toList()));
 		Map<QName, Serializable> properties = transformPropMap(propsConverted);
 
 
@@ -285,14 +289,14 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 					try {
 						forceMds = (Boolean) nodeService.getProperty(parentRef, QName.createQName(CCConstants.CM_PROP_METADATASET_EDU_FORCEMETADATASET));
 						if (forceMds == null) forceMds = false;
-					} catch (Throwable t) {
+					} catch (Throwable ignored) {
 					}
 				}
-				if (forceMds) {
+				if (Boolean.TRUE.equals(forceMds)) {
 					return (String) nodeService.getProperty(parentRef, QName.createQName(CCConstants.CM_PROP_METADATASET_EDU_METADATASET));
 				} else {
 					String mdsId;
-					if(HttpContext.getCurrentMetadataSet() != null && HttpContext.getCurrentMetadataSet().trim().length() > 0) {
+					if(HttpContext.getCurrentMetadataSet() != null && !HttpContext.getCurrentMetadataSet().trim().isEmpty()) {
 						mdsId = HttpContext.getCurrentMetadataSet();
 					}else {
 						mdsId = CCConstants.metadatasetdefault_id;
@@ -336,6 +340,10 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 						try {
 							return sdf.parse(p);
 						} catch (ParseException e) {
+							long l = Long.parseLong(p);
+							if(l > 0) {
+								return new Date(l);
+							}
 							throw new RuntimeException(e);
 						}
 					}).collect(Collectors.toList());
@@ -351,6 +359,10 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 						try {
 							return sdf.parse(p);
 						} catch (ParseException e) {
+							long l = Long.parseLong(p);
+							if(l > 0) {
+								return new Date(l);
+							}
 							throw new RuntimeException(e);
 						}
 					}).collect(Collectors.toList());
@@ -367,10 +379,10 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 			if(!widget.isMultivalue() && values.size()>1)
 				throw new IllegalArgumentException("Multiple values given for a non-multivalue widget: ID "+id+", widget type "+widget.getType());
 			if(widget.isMultivalue()){
-				toSafe.put(id,values.size()==0 ? null : new ArrayList<>(values));
+				toSafe.put(id, values.isEmpty() ? null : new ArrayList<>(values));
 			}
 			else{
-				toSafe.put(id,values.size()==0 ? null : values.get(0));
+				toSafe.put(id, values.isEmpty() ? null : values.get(0));
 			}
 
 			if(widget.getSuggestDisplayProperty() != null){
@@ -381,7 +393,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 						List<? extends Suggestion> suggestions = MetadataSearchHelper.getSuggestions(getApplication().getAppId(), mds, "ngsearch", widget.getId(), key, null);
 						displayStrings.add(suggestions.get(0).getDisplayString());
 					}
-					toSafe.put(CCConstants.getValidGlobalName(widget.getSuggestDisplayProperty()),displayStrings.size()==0 ? null : new ArrayList<>(displayStrings));
+					toSafe.put(CCConstants.getValidGlobalName(widget.getSuggestDisplayProperty()), displayStrings.isEmpty() ? null : new ArrayList<>(displayStrings));
 				}
 			}
 		}
@@ -456,8 +468,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 		return null;
 	}
 	private List<ChildAssociationRef> getChildrenAssocsByType(StoreRef store, String nodeId, String type) {
-		List<ChildAssociationRef> childAssocList = this.getChildAssocs(new NodeRef(store, nodeId), Collections.singleton(QName.createQName(type)));
-		return childAssocList;
+        return this.getChildAssocs(new NodeRef(store, nodeId), Collections.singleton(QName.createQName(type)));
 	}
 
 	@Override
@@ -558,7 +569,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 			// VCard
 			String type = nodeService.getType(nodeRef).toString();
 			Map<String, Object> vcard = VCardConverter.getVCardMap(type, qname.toString(), value);
-			if (vcard != null && vcard.size() > 0)
+			if (vcard != null && vcard.isEmpty())
 				resultProps.putAll(vcard);
 
 		}
@@ -579,16 +590,14 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 
 				Date date = (Date) value;
 
-				if (date != null) {
-					returnValue = new Long(date.getTime()).toString();
-				}
+                returnValue = Long.toString(date.getTime());
 
-			} else {
+            } else {
 				returnValue = getValue(type, key, value, metadataSetId);
 			}
 
 			// like de_DE=null in gui
-			if (returnValue == null && value != null && !(value instanceof MLText || value instanceof List)) {
+			if (returnValue == null && !(value instanceof MLText || value instanceof List)) {
 				returnValue = value.toString();
 			}
 		}
@@ -599,29 +608,33 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 
 		//MetadataSetModelProperty mdsmProp = getMetadataSetModelProperty(metadataSetId, type, prop);
 
-		if (_value instanceof List && ((List) _value).size() > 0) {
-			String result = null;
-			for (Object value : (List) _value) {
+		if (_value instanceof List && !((List<?>) _value).isEmpty()) {
+			StringBuilder result = null;
+			for (Object value : (List<?>) _value) {
 				if (result != null)
-					result += CCConstants.MULTIVALUE_SEPARATOR;
+					result.append(CCConstants.MULTIVALUE_SEPARATOR);
 				if (value != null) {
 					if (value instanceof MLText) {
 						String tmpStr = getMLTextString(value);
 						if (result != null)
-							result += tmpStr;
+							result.append(tmpStr);
 						else
-							result = tmpStr;
+							result = new StringBuilder(tmpStr);
 					} else {
 						if (result != null)
-							result += value.toString();
+							result.append(value);
 						else
-							result = value.toString();
+							result = new StringBuilder(value.toString());
 					}
 				}
 			}
 
-			return result;
-		} else if (_value instanceof List && ((List) _value).size() == 0) {
+			if(result == null){
+				return "";
+			}
+
+			return result.toString();
+		} else if (_value instanceof List) {
 			// cause empty list toString returns "[]"
 			return "";
 		} else if (_value instanceof String) {
@@ -646,7 +659,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 				return mlText.getDefaultValue();
 			}
 
-			String mlValueString = null;
+			StringBuilder mlValueString = null;
 
 			for (Locale locale : mlText.getLocales()) {
 				String mlValue = mlText.getValue(locale);
@@ -657,19 +670,19 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 					// for props that are declared multilang in alfresco model
 					// but not in cc metadataset then props are saved as default.
 					if (mlText.getLocales().size() == 1 && localeStr.equals(CCConstants.defaultLocale)) {
-						mlValueString = mlValue;
+						mlValueString = new StringBuilder(mlValue);
 					} else {
-						mlValueString = localeStr + "=" + mlValue;
+						mlValueString = new StringBuilder(localeStr + "=" + mlValue);
 					}
 				} else {
-					mlValueString += "[,]" + localeStr + "=" + mlValue;
+					mlValueString.append("[,]").append(localeStr).append("=").append(mlValue);
 				}
 			}
-			if (mlValueString != null && !mlValueString.trim().equals("") && !mlValueString.contains(CCConstants.defaultLocale)) {
-				mlValueString += "[,]default=" + mlText.getDefaultValue();
+			if (StringUtils.isBlank(mlValueString.toString()) && !mlValueString.toString().contains(CCConstants.defaultLocale)) {
+				mlValueString.append("[,]default=").append(mlText.getDefaultValue());
 			}
 
-			return mlValueString;
+			return mlValueString.toString();
 		} else {
 			return _mlText.toString();
 		}
@@ -766,26 +779,27 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 
 	Map<QName, Serializable> transformPropMap(Map<String, ?> map) {
 		Map<QName, Serializable> result = new HashMap<>();
-		for (Object key : map.keySet()) {
+        for (Map.Entry<String, ?> entry : map.entrySet()) {
+            String key =  entry.getKey();
+            Object value =  entry.getValue();
 
 			try {
-				Object value = map.get(key);
 				if (value instanceof Map) {
-					value = getMLText((Map) value);
+					value = getMLText((Map<String, String>) value);
 				} else if (value instanceof List) {
-					List transformedList = new ArrayList();
-					for (Object valCol : (List) value) {
+					List<Object> transformedList = new ArrayList<>();
+					for (Object valCol : (List<?>) value) {
 						if (valCol instanceof Map) {
-							transformedList.add(getMLText((Map) valCol));
+							transformedList.add(getMLText((Map<String, String>) valCol));
 						} else {
 							transformedList.add(valCol);
 						}
 					}
 					value = transformedList;
 				}
-				result.put(QName.createQName((String) key), (Serializable) value);
+				result.put(QName.createQName(key), (Serializable) value);
 			} catch (ClassCastException e) {
-				logger.error("this prop has a wrong value:" + key + " val:" + map.get(key));
+				logger.error("this prop has a wrong value:" + key + " val:" + value);
 				logger.error(e.getMessage(), e);
 			}
 		}
@@ -811,8 +825,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 
 	public boolean isSubOf(String type, String parentType) throws Throwable {
 
-		boolean isSubOf = serviceRegistry.getDictionaryService().isSubClass(QName.createQName(type), QName.createQName(parentType));
-		return isSubOf;
+        return serviceRegistry.getDictionaryService().isSubClass(QName.createQName(type), QName.createQName(parentType));
 	}
 
 	public void setOwner(String nodeId, String username) {
@@ -845,7 +858,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 	public String getUserInbox(boolean createIfNotExists) {
 		NodeRef userhome=repositoryHelper.getUserHome(repositoryHelper.getPerson());
 		List<ChildAssociationRef> inbox = nodeService.getChildAssocsByPropertyValue(userhome, QName.createQName(CCConstants.CCM_PROP_MAP_TYPE), CCConstants.CCM_VALUE_MAP_TYPE_USERINBOX);
-		if(inbox!=null && inbox.size()>0)
+		if(inbox!=null && !inbox.isEmpty())
 			return inbox.get(0).getChildRef().getId();
 		if(createIfNotExists) {
 			Map<String, Object> properties = new HashMap<>();
@@ -859,7 +872,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 	public String getUserSavedSearch(boolean createIfNotExists) {
 		NodeRef userhome=repositoryHelper.getUserHome(repositoryHelper.getPerson());
 		List<ChildAssociationRef> savedSearch = nodeService.getChildAssocsByPropertyValue(userhome, QName.createQName(CCConstants.CCM_PROP_MAP_TYPE), CCConstants.CCM_VALUE_MAP_TYPE_USERSAVEDSEARCH);
-		if(savedSearch!=null && savedSearch.size()>0)
+		if(savedSearch!=null && !savedSearch.isEmpty())
 			return savedSearch.get(0).getChildRef().getId();
 		if(createIfNotExists) {
 			Map<String, Object> properties = new HashMap<>();
@@ -874,26 +887,27 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 	 * Supported values for filter:
 	 * special: show all files which are usually not displayed anyway (usage, share, thumbnail)
 	 * files: return only files
+	 *
+	 * @param <T>
 	 * @param list
 	 * @param filter
 	 * @param sortDefinition
-	 * @param <T>
 	 * @return
 	 */
 	@Override
-	public <T>List<T> sortNodeRefList(List<T> list,List<String> filter, SortDefinition sortDefinition){
+	public <T>List<T> sortNodeRefList(List<T> list, List<String> filter, SortDefinition sortDefinition){
 		// make a copy so we have a modifiable list object
 		list=new ArrayList<>(list);
 		List<T> filtered = new ArrayList<>();
 		for(T obj : list){
-			if(!EduSharingNodeHelper.shouldFilter(getAsNode(obj),filter)){
+			if(!EduSharingNodeHelper.shouldFilter(getAsNode(obj), filter)){
 				filtered.add(obj);
 			}
 		}
 		list=filtered;
 
 		Map<String,Object> cache=new HashMap<>();
-		Collections.sort(list, (o1, o2) -> sortNodes(cache,getAsNode(o1),getAsNode(o2),sortDefinition));
+        list.sort((o1, o2) -> sortNodes(cache, getAsNode(o1), getAsNode(o2), sortDefinition));
 		return list;
 	}
 
@@ -961,13 +975,13 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 			if(prop1==null && prop2!=null) {
 				try {
 					prop1=prop2.getClass().getConstructor().newInstance();
-				}catch(Throwable t){}
+				}catch(Throwable ignored){}
 
 			}
 			else if(prop1!=null && prop2==null) {
 				try {
 					prop2=prop1.getClass().getConstructor().newInstance();
-				}catch(Throwable t){}
+				}catch(Throwable ignored){}
 			}
 			if(prop1==null && prop2==null){
 				continue;
@@ -999,7 +1013,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 					} else if (prop1 instanceof Date && prop2 instanceof Date) {
 						compare = ((Date) prop1).compareTo((Date) prop2);
 					} else if (prop1 instanceof Comparable && prop2 instanceof Comparable) {
-						compare = ((Comparable) prop1).compareTo((Comparable) prop2);
+						compare = ((Comparable) prop1).compareTo(prop2);
 					}
 				}
 			}
@@ -1070,7 +1084,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 		if (parentID == null) {
 
 			String startParentId = apiClient.getRootNodeId();
-			if (startParentId == null || startParentId.trim().equals("")) {
+			if (StringUtils.isBlank(startParentId)) {
 				parentID = nodeService.getRootNode(StoreRef.STORE_REF_WORKSPACE_SPACESSTORE).getId();
 			} else {
 				parentID = startParentId;
@@ -1086,7 +1100,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 			return this.getChildAssocs(parentNodeRef);
 		}
 		else {
-			return this.getChildAssocs(parentNodeRef,new HashSet<>(Arrays.asList(QName.createQName(childType))));
+			return this.getChildAssocs(parentNodeRef,new HashSet<>(List.of(QName.createQName(childType))));
 		}
 
 	}
@@ -1161,12 +1175,8 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 			method.setAccessible(true);
 
 			Object r = method.invoke(nodeServiceAlfresco,nodeRef,false);
-		} catch (NoSuchMethodException e) {
-			e.printStackTrace();
-		} catch (IllegalAccessException e) {
-			e.printStackTrace();
-		} catch (InvocationTargetException e) {
-			e.printStackTrace();
+		} catch (NoSuchMethodException | InvocationTargetException | IllegalAccessException e) {
+			logger.error(e.getMessage(), e);
 		}
 		/*	return null;
 		});*/
@@ -1236,7 +1246,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 		try{
 			ApplicationContext eduAppContext = ApplicationContextFactory.getApplicationContext();
 			eduAppContext.getBean(FeatureInfoDoiService.class);
-			handleServiceFactory.instance(HandleServiceFactory.IMPLEMENTATION.doi).updateState(nodeId, "register");
+			handleServiceFactory.instance(HandleServiceFactory.IMPLEMENTATION.doi).updateState(nodeId, "hide");
 		}catch (NoSuchBeanDefinitionException e){
 			logger.info("doi service not enabled");
 		}
@@ -1360,7 +1370,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 		}
 		String currentHandle = null;
 		// fetch the last given handle from the currently existing copies
-		if(handleMode.equals(HandleMode.update) && publishedCopies.size() > 0 ){
+		if(handleMode.equals(HandleMode.update) && !publishedCopies.isEmpty()){
 			Set<String> handles = publishedCopies.stream().filter((c) ->
 					getProperty(StoreRef.PROTOCOL_WORKSPACE, StoreRef.STORE_REF_WORKSPACE_SPACESSTORE.getIdentifier(), c, handleService.getHandleIdProperty()) != null
 			).map((c) ->
@@ -1373,7 +1383,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 		}
 
 		String generated = null;
-		String handle = null;
+		String handle;
 
 		Map<QName, Serializable> publishedProps = new HashMap<>();
 
@@ -1437,7 +1447,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 					} else {
 						properties.put(QName.createQName(CCConstants.CCM_PROP_PUBLISHED_HANDLE_ID), handle);
 					}
-				} else if (handleMode.equals(HandleMode.update)) {
+				} else {
 					logger.info("Update handle " + handle + ", " + contentLink);
 					handleService.update(handle, nodeRef.getId(), properties);
 				}
@@ -1581,7 +1591,7 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 	@Override
 	public void removeProperty(String storeProtocol, String storeId, String nodeId, String property) {
 		// when interceptors are active, use set instead to trigger interceptors
-		if(PropertiesInterceptorFactory.getPropertiesSetInterceptors().size() > 0) {
+		if(!PropertiesInterceptorFactory.getPropertiesSetInterceptors().isEmpty()) {
 			setProperty(storeProtocol, storeId, nodeId, property, null, true);
 		} else {
 			nodeService.removeProperty(new NodeRef(new StoreRef(storeProtocol, storeId), nodeId), QName.createQName(property));
@@ -1676,15 +1686,15 @@ public class NodeServiceImpl implements org.edu_sharing.service.nodeservice.Node
 			}
 
 			if (!propertyDefinition.isMultiValued() && value instanceof Collection) {
-				if (((Collection) value).stream().iterator().hasNext()) {
-					value = (Serializable) ((Collection) value).stream().iterator().next();
+				if (((Collection<?>) value).stream().iterator().hasNext()) {
+					value = (Serializable) ((Collection<?>) value).stream().iterator().next();
 				} else {
 					value = null;
 				}
 			}
 		}
 		Map<String, Object> properties = null;
-		if(PropertiesInterceptorFactory.getPropertiesSetInterceptors().size() > 0) {
+		if(!PropertiesInterceptorFactory.getPropertiesSetInterceptors().isEmpty()) {
 			try {
 				properties = nodeService.getProperties(nodeRef).entrySet().stream().collect(
 						HashMap::new,
